# isobemak

./: API.md  CHANGELOG.md  Cargo.toml  README.md
.github/: cliff.toml
.github/workflows/: release.yml
examples/: debug_fat.rs  gen_test_iso.rs  test_fat_standalone.rs  tiny_debug_fat.rs  verify_fat.rs
hello-BoaJS/: Cargo.toml
hello-BoaJS/src/: lib.rs  main.rs
src/: builder.rs  fat.rs  fat32.rs  gpt.rs  iso.rs  iso_builder.rs  lib.rs  utils.rs
src/iso/: boot_catalog.rs  boot_info.rs  builder.rs  builder_utils.rs  constants.rs  dir_record.rs  disk_layout.rs  fs_node.rs  gpt.rs  iso.rs  iso_image.rs  iso_writer.rs  layout_profile.rs  mbr.rs  mod.rs  volume_descriptor.rs
src/iso/gpt/: header.rs  main_gpt_functions.rs  mod.rs  partition_entry.rs
tests/: integration.rs
tests/integration_tests/: basic_iso.rs  choosable_simulation.rs  common.rs  firmware_simulation.rs  integrity_and_boot.rs  isohybrid_uefi.rs  mod.rs
