[package]
name = "isobemak"
version = "0.2.2"
edition = "2024"
authors = ["p14c31355 <thinkoverheat@gmail.com>"]
description = "Create bootable ISO images with FAT32 and UEFI (El Torito) support in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/p14c31355/isobemak"
readme = "README.md"
documentation = "https://docs.rs/isobemak"
keywords = ["iso", "iso9660", "uefi", "el-torito", "filesystem"]
categories = ["filesystem", "os", "development-tools::build-utils"]
exclude = [
  "target/",
  ".github/",
]

[dependencies]
fatfs = "0.3.6"
tempfile = "3.22.0"

[dev-dependencies]
tempfile = "3.22.0"
